@@ -1,22 +1,21 @@
 package leetcode;
 
-import java.util.ArrayList;
-import java.util.List;
+import java.util.LinkedList;
 
 public class PrintAllSubsetOfString {
 
-    private static void findSubset(char[] a, int index, List<String> list) {
+    private static void findSubset(char[] a, int index, LinkedList<String> list) {
         if (index == a.length) {
             System.out.println(list);
         } else {
             findSubset(a, index + 1, list);
             list.add("" + a[index]);
             findSubset(a, index + 1, list);
-            list.remove(list.size() - 1);
+            list.removeLast();
         }
     }
 
     public static void main(String[] args) {
-        findSubset("abc".toCharArray(), 0, new ArrayList<>());
+        findSubset("abc".toCharArray(), 0, new LinkedList<>());
     }
 }
